# ws23-door-opening

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/door_opening/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gazebo_grasp_plugin/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gazebo_version_helpers/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gen3_lite_gen3_lite_2f_move_it_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gen3_move_it_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gen3_robotiq_2f_140_move_it_config/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/gen3_robotiq_2f_85_move_it_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/kinova_vision/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/kortex_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/kortex_driver/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/kortex_examples/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/kortex_move_it_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/lever_detection/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/roboticsgroup_upatras_gazebo_plugins/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/kortex_driver/: Action.h  ActionEvent.h  ActionExecutionState.h  ActionHandle.h  ActionList.h  ActionNotification.h  ActionNotificationList.h  ActionType.h  Action_action_parameters.h  ActivateMap.h  ActivateMapHandle.h  ActivateMapRequest.h  ActivateMapResponse.h  ActuatorCommand.h  ActuatorConfig_ClearFaults.h  ActuatorConfig_ClearFaultsRequest.h  Admittance.h  (+1208 more)
logs/gazebo_grasp_plugin/: build.check.002.log.stderr
logs/kinova_vision/: build.cmake.000.log.stderr
logs/kortex_driver/: build.cmake.000.log.stderr
src/: force_estimator.cpp  main.cpp  trial.cpp  utilities.cpp
src/app/: CMakeLists.txt  main.cc
src/door_opening/: CMakeLists.txt  package.xml
src/lever_detection/: CMakeLists.txt  package.xml
third_parties/: main
urdf/: gen3_kinova.urdf
(+3659 files in other folders)
